--- a/app/src/main/res/layouts/products/layout/fragment_products.xml
+++ b/app/src/main/res/layouts/products/layout/fragment_products.xml
@@ -19,6 +19,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:contentDescription="@string/addNewProduct"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/ic_add_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
