--- a/app/src/main/res/layouts/recipe/layout/fragment_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_recipe.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:contentDescription="@string/addRecipe"
-            android:src="@drawable/ic_add" />
+            android:src="@drawable/ic_add_24" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
