--- a/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
+++ b/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
@@ -17,7 +17,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="36dp"
+            android:layout_marginHorizontal="18dp"
             android:layout_marginTop="16dp"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
             android:id="@+id/bIncreaseAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
+            android:layout_marginHorizontal="18dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/round_corner"
             android:contentDescription="@string/increaseButton"
@@ -66,6 +66,7 @@
             android:scaleX="0.75"
             android:scaleY="0.75"
             android:src="@drawable/ic_add_48"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleInputLayout" />
 
@@ -73,8 +74,8 @@
             android:id="@+id/bDecreaseAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="36dp"
             android:background="@drawable/round_corner"
             android:contentDescription="@string/decreaseButton"
             android:elevation="16dp"
@@ -82,8 +83,19 @@
             android:scaleX="0.75"
             android:scaleY="0.75"
             android:src="@drawable/ic_minus_48"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/sMeasure"
             app:layout_constraintTop_toBottomOf="@+id/titleInputLayout" />
+
+        <Spinner
+            android:id="@+id/sMeasure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:tooltipText="@string/measure"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout"
+            tools:listitem="@layout/measure_spinner_item" />
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
