Recipe. Add description field.

--- a/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".recipe.addedit.AddEditRecipeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,18 +32,41 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/noteInputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="36dp"
+            app:errorEnabled="true"
+            app:layout_constraintEnd_toStartOf="@+id/cbFavorite"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/eRecipeNote"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/note" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/descriptionInputLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="36dp"
+            android:layout_marginVertical="8dp"
             app:errorEnabled="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_default="percent"
             app:layout_constraintHeight_percent="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout"
+            app:layout_constraintTop_toBottomOf="@+id/noteInputLayout"
             app:layout_constraintVertical_bias="0.0">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -62,8 +85,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/favorite"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
