Recipe. Replace description as string to description as arraylist<string>

--- a/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
@@ -72,6 +72,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/eRecipeDescription"
                 android:layout_width="match_parent"
+                android:gravity="start"
+
                 android:layout_height="match_parent"
                 android:hint="@string/description" />
 
