--- a/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
@@ -52,6 +52,65 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <ImageButton
+            android:id="@+id/bPreviousPart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="36dp"
+            android:background="@drawable/round_corner"
+            android:clickable="false"
+            android:contentDescription="@string/previousButton"
+            android:elevation="16dp"
+            android:padding="1dp"
+            android:scaleX="0.75"
+            android:scaleY="0.75"
+            android:src="@drawable/ic_arrow_back_48"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/noteInputLayout" />
+
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:padding="8dp"
+            android:text="@string/part"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/bNextPart"
+            app:layout_constraintHorizontal_bias="0.35"
+            app:layout_constraintStart_toEndOf="@+id/bPreviousPart"
+            app:layout_constraintTop_toBottomOf="@+id/noteInputLayout" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="32dp"
+            android:padding="8dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/bNextPart"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/noteInputLayout" />
+
+        <ImageButton
+            android:id="@+id/bNextPart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="36dp"
+            android:background="@drawable/round_corner"
+            android:contentDescription="@string/nextButton"
+            android:elevation="16dp"
+            android:padding="1dp"
+            android:scaleX="0.75"
+            android:scaleY="0.75"
+            android:src="@drawable/ic_arrow_forward_48"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/noteInputLayout" />
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/descriptionInputLayout"
@@ -59,22 +118,20 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="36dp"
-            android:layout_marginVertical="8dp"
             app:errorEnabled="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_default="percent"
             app:layout_constraintHeight_percent="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/noteInputLayout"
+            app:layout_constraintTop_toBottomOf="@+id/bPreviousPart"
             app:layout_constraintVertical_bias="0.0">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/eRecipeDescription"
                 android:layout_width="match_parent"
-                android:gravity="start"
-
                 android:layout_height="match_parent"
+                android:gravity="start"
                 android:hint="@string/description" />
 
         </com.google.android.material.textfield.TextInputLayout>
