--- a/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
+++ b/app/src/main/res/layouts/products/layout/fragment_add_edit_products.xml
@@ -89,8 +89,9 @@
             android:id="@+id/sMeasure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="48dp"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:tooltipText="@string/measure"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titleInputLayout"
