--- a/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_add_edit_recipe.xml
@@ -48,6 +48,7 @@
                 android:id="@+id/eRecipeNote"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:maxWidth="200dp"
                 android:hint="@string/note" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -70,7 +71,7 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/vPart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -81,19 +82,6 @@
             app:layout_constraintEnd_toStartOf="@+id/bNextPart"
             app:layout_constraintHorizontal_bias="0.35"
             app:layout_constraintStart_toEndOf="@+id/bPreviousPart"
-            app:layout_constraintTop_toBottomOf="@+id/noteInputLayout" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="32dp"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/bNextPart"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/noteInputLayout" />
 
         <ImageButton
