--- a/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
@@ -11,14 +11,15 @@
         android:layout_height="match_parent"
         android:padding="8dp">
 
-        <TextView
+        <Button
+            android:id="@+id/testButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            tools:text="Hello world"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Hello world" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
