Recipe. Redirection to edit the recipe

--- a/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
@@ -22,4 +22,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fbEditRecipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/edit"
+        android:src="@drawable/ic_edit_48" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
