--- a/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
@@ -11,15 +11,59 @@
         android:layout_height="match_parent"
         android:padding="8dp">
 
-        <Button
-            android:id="@+id/testButton"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/recipeTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Hello world"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginHorizontal="36dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/custom_textview"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Example Title" />
+
+        <TextView
+            android:id="@+id/recipeNote"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="36dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/custom_textview"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recipeTitle"
+            tools:text="Example Note" />
+
+        <View
+            android:id="@+id/view3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="36dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recipeNote"
+            app:layout_constraintVertical_bias="0.15" />
+
+        <Button
+            android:id="@+id/openRecipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/openRecipe"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view3"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
