--- a/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_review_recipe.xml
@@ -17,8 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="36dp"
-            android:layout_marginTop="16dp"
-            app:errorEnabled="true"
+            android:layout_marginVertical="28dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -27,10 +26,10 @@
                 android:id="@+id/eRecipeTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:focusable="false"
                 android:hint="@string/name"
-                tools:text ="Example Title"
                 android:inputType="none"
-                android:focusable="false"/>
+                tools:text="Example Title" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -40,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="36dp"
-            app:errorEnabled="true"
+            android:layout_marginVertical="28dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleInputLayout">
@@ -49,14 +49,15 @@
                 android:id="@+id/eRecipeNote"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:focusable="false"
                 android:hint="@string/note"
-                tools:text ="Example Note"
+                android:maxLines="5"
                 android:inputType="none"
-                android:focusable="false"/>
+                tools:text="Example Note" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <view class="androidx.appcompat.app.AlertController$RecycleListView"
-            android:id="@+id/view3"
+        <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="36dp"
@@ -66,8 +67,16 @@
             app:layout_constraintHeight_percent="0.3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/noteInputLayout"
-            app:layout_constraintVertical_bias="0.1"
-            />
+            app:layout_constraintVertical_bias="0.1">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycleViewProduct"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/recipe_product_item"
+                />
+
+        </ScrollView>
 
         <Button
             android:id="@+id/openRecipe"
@@ -77,7 +86,7 @@
             android:text="@string/openRecipe"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view3"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView"
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
