--- a/app/src/main/res/layouts/recipe/layout/fragment_steps_recipe.xml
+++ b/app/src/main/res/layouts/recipe/layout/fragment_steps_recipe.xml
@@ -62,7 +62,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/descriptionInputLayout"
+            android:id="@+id/stepInputLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -77,7 +77,7 @@
             app:layout_constraintVertical_bias="0.0">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/eRecipeDescription"
+                android:id="@+id/eRecipeStep"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="start"
