--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -124,13 +124,15 @@
     <fragment
         android:id="@+id/stepsRecipeFragment"
         android:name="com.example.kitchenhelperkotlin.recipe.steps.StepsRecipeFragment"
-        android:label="fragment_steps_recipe"
+        android:label="{title}"
         tools:layout="@layout/fragment_steps_recipe" >
         <argument
             android:name="title"
             app:argType="string" />
         <argument
-            android:name="steps"
-            app:argType="string[]" />
+            android:name="recipe"
+            app:argType="com.example.kitchenhelperkotlin.recipe.Recipe"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 </navigation>
